📰Chore: GitHub Actions ci.yml docker-compose 설치 메소드 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,11 @@ jobs:
           pip install -r fastapi/requirements.txt
           pip install -r streamlit/requirements.txt
 
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+          
       - name: Build Docker Compose
         run: |
           docker-compose up -d --build
