--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout Repository 🛠️
         uses: actions/checkout@v4
 
+      - name: Remove Conflicting `containerd` Package 🗑️
+        run: sudo apt-get remove -y containerd || true
+
       - name: Install Docker 🔧
         run: |
           sudo apt-get update
