🚀 Fix: Docker Hub 로그인 문제 해결

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository 🛠️
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install Docker 🔧
+      - name: Install Docker
         run: |
           curl -fsSL https://get.docker.com | sh
 
       - name: Login to Docker Hub 🔑
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build & Push FastAPI Docker Image 📦
+      - name: Build & Push FastAPI Docker Image
         run: |
           cd fastapi
           docker build -t ${{ secrets.DOCKER_USERNAME }}/biosearch-fastapi:latest .
@@ -28,7 +28,7 @@ jobs:
           docker push ${{ secrets.DOCKER_USERNAME }}/biosearch-fastapi:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/biosearch-fastapi:$GITHUB_SHA
 
-      - name: Build & Push Streamlit Docker Image 📦
+      - name: Build & Push Streamlit Docker Image
         run: |
           cd streamlit
           docker build -t ${{ secrets.DOCKER_USERNAME }}/biosearch-streamlit:latest .
